// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Badge with custom className 1`] = `
<span
  className="width-auto badge-secondary custom-class badge rounded-pill"
/>
`;

exports[`renders default Badge 1`] = `
<span
  className="width-auto badge-secondary badge rounded-pill"
/>
`;
